2015-07-09  Roland McGrath  <roland@hack.frob.com>

	* include/stdio.h: Add rtld_hidden_proto (__libc_fatal).
	* elf/dl-minimal.c: For readability, reorder some definitions and
	introduce more page breaks.  Include <stdio.h>.
	(__libc_fatal): New function.

	* include/unistd.h: Add rtld_hidden_proto for _exit.
	* posix/_exit.c: Add rtld_hidden_def.
	* sysdeps/mach/hurd/_exit.c: Likewise.
	* sysdeps/nacl/_exit.c: Likewise.
	* sysdeps/unix/sysv/linux/_exit.c: Likewise.
	* sysdeps/unix/sysv/linux/i386/_exit.S: Likewise.

2015-07-09  H.J. Lu  <hongjiu.lu@intel.com>

	* sysdeps/x86_64/dl-trampoline.S (_dl_runtime_resolve): Improve
	bndmov encoding with zero displacement.

2015-07-09  Igor Zamyatin  <igor.zamyatin@intel.com>
	    H.J. Lu  <hongjiu.lu@intel.com>

	[BZ #18134]
	* sysdeps/i386/configure.ac: Set HAVE_MPX_SUPPORT.
	* sysdeps/i386/configure: Regenerated.
	* sysdeps/i386/dl-trampoline.S (PRESERVE_BND_REGS_PREFIX): New.
	(_dl_runtime_profile): Save and restore Intel MPX return bound
	registers when calling _dl_call_pltexit.  Add
	PRESERVE_BND_REGS_PREFIX before return.
	* sysdeps/i386/link-defines.sym (LRV_BND0_OFFSET): New.
	(LRV_BND1_OFFSET): Likewise.
	* sysdeps/x86/bits/link.h (La_i86_retval): Add lrv_bnd0 and
	lrv_bnd1.
	* sysdeps/x86_64/dl-trampoline.S (_dl_runtime_profile): Fix
	typo in bndmov encoding.
	* sysdeps/x86_64/dl-trampoline.h: Properly save and restore
	Intel MPX bound registers.  Add PRESERVE_BND_REGS_PREFIX before
	branch instructions to preserve bounds.

2015-07-09  Adhemerval Zanella  <adhemerval.zanella@linaro.org>

	* sysdeps/unix/sysv/linux/powerpc/powerpc64/libc-le.abilist
	[GLIBC_2.22]: Add fmemopen.

2015-07-09  Samuel Thibault  <samuel.thibault@ens-lyon.org>

	* sysdeps/mach/hurd/mlock.c (mlock): When __get_privileged_ports
	returns an error, also try to use host port from __mach_host_self for
	the __vm_wire call.
	* sysdeps/mach/hurd/munlock.c (munlock): Likewise.

2015-07-09  Szabolcs Nagy  <szabolcs.nagy@arm.com>

	[BZ #18400]